# claudoros

./: .gitignore  LICENSE  README.md  pyproject.toml
claudoros/: app.py  main.py  parser.py  pomodoro.py
tests/: test_pomodoro.py
